Fixed Side Content Overflow Issue

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -9,7 +9,7 @@
 }
 
 .sidebar-content {
-    position: fixed;
+    position: relative;
     width: inherit;
 }
 
